--- a/package.json
+++ b/package.json
@@ -40,15 +40,20 @@
   "devDependencies": {
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-regenerator": "^6.21.0",
     "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.8.34",
     "es6-promise": "^3.2.1",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "webpack-combine-loaders": "^2.0.3",
+    "extract-text-webpack-plugin": "^2.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
