--- a/package.json
+++ b/package.json
@@ -49,10 +49,18 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.8.34",
     "es6-promise": "^3.2.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.14.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "webpack": "^1.15.0",
     "webpack-combine-loaders": "^2.0.3",
-    "extract-text-webpack-plugin": "^2.1.0"
+    "webpack-dev-server": "^1.14.0",
+    "karma": "^4.0.1",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vuex": "^3.1.0",
+    "karma-webpack": "^3.0.5",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^6.1.2",
+    "chai": "^4.2.0"
   },
   "dependencies": {
   }
