--- a/package.json
+++ b/package.json
@@ -48,20 +48,20 @@
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.8.34",
+    "chai": "^4.2.0",
     "es6-promise": "^3.2.1",
     "extract-text-webpack-plugin": "^2.1.0",
-    "webpack": "^1.15.0",
-    "webpack-combine-loaders": "^2.0.3",
-    "webpack-dev-server": "^1.14.0",
     "karma": "^4.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-webpack": "^3.0.5",
+    "mocha": "^6.1.2",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vuex": "^3.1.0",
-    "karma-webpack": "^3.0.5",
-    "karma-mocha": "^1.3.0",
-    "mocha": "^6.1.2",
-    "chai": "^4.2.0"
+    "webpack": "^1.15.0",
+    "webpack-combine-loaders": "^2.0.3",
+    "webpack-dev-server": "^1.14.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
